<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:extraproperty="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_forgot_password"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/lsdk_transparent"
    android:orientation="vertical" >

    <com.turkcell.loginsdk.helper.LoginSDKFontTextView
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/shape_rounded_button_positive_background_with_color"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/changePassword_turkcellSubscriber"
        android:textColor="@color/lsdk_black"
        android:textSize="18sp" />

    <com.turkcell.loginsdk.helper.LoginSDKFontTextView
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_rounded_button_positive_background_with_color"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/changePassword_nonturkcellSubscriber"
        android:textColor="@color/lsdk_black"
        android:textSize="18sp" />

    <com.turkcell.loginsdk.helper.LoginSDKFontTextView
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_rounded_button_negative_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/changePassword_quit"
        android:textColor="@color/lsdk_black"
        android:textSize="18sp" />

</LinearLayout>