<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/lsdkHeader"
        layout="@layout/login_sdk_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/lsdk_padding">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/lsdk_padding">


            <com.turkcell.loginsdk.helper.LoginSDKFontEdittext
                android:id="@+id/lsdkEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:layout_marginBottom="@dimen/lsdk_padding"
                android:layout_marginTop="@dimen/lsdk_padding"
                android:focusableInTouchMode="true"
                style="@style/LSDKEditText"
                android:hint="@string/lsdk_otp_gsm_hint"
                android:padding="@dimen/lsdk_padding" />

            <com.turkcell.loginsdk.helper.LoginSdkButton
                android:id="@+id/lsdkButtonRememberMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rounded_button_positive_background_with_color"
                android:text="@string/lsdk_otp_gsm_next" />

            <com.turkcell.loginsdk.helper.LoginSdkButton
                android:id="@+id/lsdkButtonOtherMsisdn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lsdk_padding"
                android:background="@drawable/shape_rounded_button_positive_background_with_color"
                android:text="@string/lsdk_otp_othergsm"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>